icons: svg -> font, pt. 3

--- a/src/pug/article__item_video.pug
+++ b/src/pug/article__item_video.pug
@@ -20,14 +20,14 @@ block articles__section
             .embed-responsive.embed-responsive-16by9
               iframe.embed-responsive-item(src="https://www.youtube.com/embed/_4rN_sP9DHU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
           .col-xl-8.col-lg-10.d-flex.flex-column.flex-sm-row.align-items-start.align-items-sm-center.justify-content-sm-between.px-lg-0.px-md-5.px-4
-            nav.social.d-flex.flex-wrap.align-items-center.mb-4.mb-sm-0
+            nav.social.d-flex.align-items-center.mb-4.mb-sm-0
               .social__title.mr-2 Поделиться:
-              a.social__item.color-theme-brand.mr-2(href="#")
+              a.social__item.h2.color-theme-brand.mr-2(href="#")
                 +icon('vk')
-              a.social__item.color-theme-brand.mr-2(href="#")
+              a.social__item.h2.color-theme-brand.mr-2(href="#")
                 +icon('instagram')
-              a.social__item.color-theme-brand.mr-2(href="#")
+              a.social__item.h2.color-theme-brand.mr-2(href="#")
                 +icon('youtube')
-              a.social__item.color-theme-brand.mr-0(href="#")
+              a.social__item.h2.color-theme-brand.mr-0(href="#")
                 +icon('facebook')
             a.readmore(href="#") Смотреть на нашем канале
