--- a/src/pug/category-tires.pug
+++ b/src/pug/category-tires.pug
@@ -6,7 +6,7 @@ block meta
 block filter
   .header__footer
     button.filter-toggler.d-flex.align-items-center.justify-content-center.p-2(type="button")
-      +icon('filter','filter-toggler__icon mr-2')
+      +icon('filter','filter-toggler__icon h4 mr-2')
       span.filter-toggler__title
         span.filter-toggler__show Показать
         span.filter-toggler__hide Скрыть
