--- a/src/pug/personal-pwd.pug
+++ b/src/pug/personal-pwd.pug
@@ -13,12 +13,12 @@ block personal
             input.form__field(type="password" value="")
             .form__label.form__label_title Новый пароль
             button.form__toggler.form__toggler_pwd(type="button")
-              +icon('eye')
+              +icon('eye','h4')
           .form__item.form__item_icon.mb-4
             input.form__field(type="password" value="")
             .form__label.form__label_title Повторите новый пароль
             button.form__toggler.form__toggler_pwd(type="button")
-              +icon('eye')
+              +icon('eye','h4')
       .h6.mb-1 Чтобы ваши персональные данные были в безопасности, пароль должен быть надежным и отвечать некоторым требованиям:
       .h6 длина пароля должна быть не менее 8ми символов;
         br
