--- a/src/pug/tile/row.pug
+++ b/src/pug/tile/row.pug
@@ -4,9 +4,7 @@
   .card__col
     .card__meta.card__meta_row.mb-0
       .card__features
-        .icon-marker.mr-2
-          svg.icon-fluid
-            use(xlink:href="#icon-summer")
+        +icon('summer','icon-marker mr-2')
   .card__col.card__col_lg
     a.card__title.d-block.h5.mb-0(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
   .card__col
