--- a/src/pug/personal-booking.pug
+++ b/src/pug/personal-booking.pug
@@ -25,21 +25,21 @@ block personal
       .row
         .contacts.d-flex.align-items-center.justify-content-lg-between.flex-wrap.col-xl-7
           a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mr-4.mr-lg-0.mb-2.mb-sm-0(href="#")
-            +icon('tg','contacts__icon color-theme-brand mr-2')
+            +icon('tg-filled','contacts__icon h3 color-theme-brand mr-2')
             span.contacts__item-title Напомнить в Telegram
           a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-2.mb-sm-0(href="#")
-            +icon('wapp','contacts__icon color-theme-brand mr-2')
+            +icon('wapp-filled','contacts__icon h3 color-theme-brand mr-2')
             span.contacts__item-title Напомнить в WhatsApp
         .col-xl-5.d-flex.justify-content-xl-end
           button.btn.btn_nobg.h5.p-0(type="button")
-            +icon('trash','btn__icon color-theme-brand mr-2')
+            +icon('trash','btn__icon h3 color-theme-brand mr-2')
             | Отменить запись
 
   form.section.px-lg-5.px-md-4.px-3.pt-2.pb-3.pb-sm-2.mb-5(action="#")
     .row.align-items-center
       .col-xl-8.col-sm-6
         button.btn.btn_nobg.h5.p-0(type="button")
-          +icon('tool','btn__icon color-theme-brand mr-2')
+          +icon('services','btn__icon h4 color-theme-brand mr-2')
           | Записаться на услугу
       .col-xl-4.col-sm-6
         .form__select
