--- a/src/pug/personal.pug
+++ b/src/pug/personal.pug
@@ -8,8 +8,8 @@ block filter
     button.filter-toggler.d-flex.align-items-center.justify-content-center.p-2(type="button")
       +icon('filter', 'filter-toggler__icon mr-2')
       span.filter-toggler__title
-        span.filter-toggler__show Показать
-        span.filter-toggler__hide Скрыть
+        span.filter-toggler__show Показать&nbsp;
+        span.filter-toggler__hide Скрыть&nbsp;
         | меню
 
 block wrapper
