--- a/src/pug/service.pug
+++ b/src/pug/service.pug
@@ -36,15 +36,15 @@ block wrapper
               +icon('arrow-next')
           .swiper-wrapper
             .swiper-slide.px-3
-              .icon-rounded.color-theme-brand.bg-theme-light.mb-3
+              .icon-rounded.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mb-3
                 +icon('scales')
               p Уменьшение срока службы подвески. Неточная или не качественная балансировка может привести к поломке всей ходовой. При некачественной балансировке, неверно выбранный груз или неверном его креплении на диске в процессе эксплуатации груз может слететь.
             .swiper-slide.px-3
-              .icon-rounded.color-theme-brand.bg-theme-light.mb-3
+              .icon-rounded.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mb-3
                 +icon('target')
               p Неравномерная изношенность покрышек. При неверной балансировке износ шин происходит намного быстрее, что может привести не только к преждевременной замены покрышки, но и к возникновению аварийной ситуации на дороге.
             .swiper-slide.px-3
-              .icon-rounded.color-theme-brand.bg-theme-light.mb-3
+              .icon-rounded.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mb-3
                 +icon('attention')
               p Безопасность на дороге. Дороже этого ничего быть не может. Сэкономленные 2 часа на смену комплекта шин у непрофессионалов не стоят Вашей безопасности и безопасности Ваших близких.
 
@@ -63,7 +63,7 @@ block wrapper
             | или записаться вы можете по телефону:
           .contacts
             a.contacts__item.d-flex.align-items-center.h3.font-weight-bold.text-nowrap.color-theme-brand(href="tel:+73652777068")
-              +icon('phone','contacts__icon color-theme-brand mr-2')
+              +icon('phone','contacts__icon h3 color-theme-brand mr-2')
               span.contacts__item-title +7 (365) 277-70-68
     .mb-3
       .h2.font-weight-bold.mb-4 Отзывы
@@ -72,9 +72,8 @@ block wrapper
           .swiper-slide
             .review.review_slide.h-100.p-3
               .review__header.d-flex.align-items-center.mb-3
-                .icon-rounded.color-theme-brand.bg-theme-light.mr-3
-                  svg.icon-fluid
-                    use(xlink:href="#icon-emoji")
+                .icon-rounded.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mr-3
+                  +icon('emoji')
                 .review__meta.flex-grow-1
                   .review__title.d-block.h4.color-theme-brand Анатолий Ефимов
                   .date 10 дек в 11:37
@@ -82,9 +81,8 @@ block wrapper
           .swiper-slide
             .review.review_slide.h-100.p-3
               .review__header.d-flex.align-items-center.mb-3
-                .icon-rounded.color-theme-brand.bg-theme-light.mr-3
-                  svg.icon-fluid
-                    use(xlink:href="#icon-emoji")
+                .icon-rounded.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mr-3
+                  +icon('emoji')
                 .review__meta.flex-grow-1
                   .review__title.d-block.h4.color-theme-brand Павел Антипин
                   .date 10 дек в 11:37
@@ -92,9 +90,8 @@ block wrapper
           .swiper-slide
             .review.review_slide.h-100.p-3
               .review__header.d-flex.align-items-center.mb-3
-                .icon-rounded.color-theme-brand.bg-theme-light.mr-3
-                  svg.icon-fluid
-                    use(xlink:href="#icon-emoji")
+                .icon-rounded.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mr-3
+                  +icon('emoji')
                 .review__meta.flex-grow-1
                   .review__title.d-block.h4.color-theme-brand Костя Боярский
                   .date 10 дек в 11:37
@@ -102,9 +99,8 @@ block wrapper
           .swiper-slide
             .review.review_slide.h-100.p-3
               .review__header.d-flex.align-items-center.mb-3
-                .icon-rounded.color-theme-brand.bg-theme-light.mr-3
-                  svg.icon-fluid
-                    use(xlink:href="#icon-emoji")
+                .icon-rounded.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mr-3
+                  +icon('emoji')
                 .review__meta.flex-grow-1
                   .review__title.d-block.h4.color-theme-brand Иван Трактиров
                   .date 10 дек в 11:37
@@ -112,9 +108,8 @@ block wrapper
           .swiper-slide
             .review.review_slide.h-100.p-3
               .review__header.d-flex.align-items-center.mb-3
-                .icon-rounded.color-theme-brand.bg-theme-light.mr-3
-                  svg.icon-fluid
-                    use(xlink:href="#icon-emoji")
+                .icon-rounded.h1.d-flex.align-items-center.justify-content-center.color-theme-brand.bg-theme-light.mr-3
+                  +icon('emoji')
                 .review__meta.flex-grow-1
                   .review__title.d-block.h4.color-theme-brand Анатолий Ефимов
                   .date 10 дек в 11:37
