--- a/src/pug/comparing.pug
+++ b/src/pug/comparing.pug
@@ -11,6 +11,7 @@ block wrapper
     section.content
       h1 Сравнить
 
+    - var comparing = ['Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL','Зимние шины Yokohama Ice','Зимние шины Yokohama Ice Guard','Yokohama Ice Guard IG55','Зимние шины Yokohama Ice Guard R17 98T XL','Шины Yokohama Ice Guard 215/55','Yokohama Guard 98T XL']
     .mb-5
       form.form.row.align-items-center(action="#")
         .col-xl-8.col-lg-6.col-md-4.d-flex.flex-wrap.align-items-center.mb-md-4.mb-2
@@ -25,8 +26,15 @@ block wrapper
           button.btn.btn_nobg.h5.p-0(type="button")
             +icon('trash','btn__icon h4 color-theme-brand mr-md-2')
             span.d-md-block.d-none Очистить список
-      include category/comparing.pug
-
+      .slides.slides_carousel.swiper-container.pt-1.pb-4
+        +slidesNav()
+        .swiper-wrapper.align-items-stretch
+          each comparing__item, index in comparing
+            .swiper-slide
+              if (index === 0)
+                +card('12 337.12', '', comparing__item, '', false, false, false, false, false, true, true, false, 'card_slide d-flex', 'content/cards/card-1.jpg', false, true, {'Ширина':185,'Высота':55,'Диаметр':16,'Сезон':'Зима','Производитель':'Yokohama','Модель':'Ice Guard IG55','Типоразмер':'215 / 55  R16','Индекс нагрузки':'102 (850 кг)'})
+              else
+                +card('12 337.12', '', comparing__item, '', false, false, false, false, false, false, false, false, 'card_slide d-flex', 'content/cards/card-1.jpg', false, true, {'Ширина':170,'Высота':45,'Диаметр':17,'Сезон':'Лето','Производитель':'Yokohama','Модель':'Ice Guard IG55','Типоразмер':'215 / 55  R17','Индекс нагрузки':'102 (850 кг)'}, true)
     .mb-5
       form.form.row.align-items-center(action="#")
         .col-xl-8.col-lg-6.col-md-4.d-flex.flex-wrap.align-items-center.mb-md-4.mb-2
@@ -41,7 +49,15 @@ block wrapper
           button.btn.btn_nobg.h5.p-0(type="button")
             +icon('trash','btn__icon h4 color-theme-brand mr-md-2')
             span.d-md-block.d-none Очистить список
-      include category/comparing.pug
+      .slides.slides_carousel.swiper-container.pt-1.pb-4
+        +slidesNav()
+        .swiper-wrapper.align-items-stretch
+          each comparing__item, index in comparing
+            .swiper-slide
+              if (index === 0)
+                +card('12 337.12', '', comparing__item, '', false, false, false, false, false, true, true, false, 'card_slide d-flex', 'content/cards/card-1.jpg', false, true, {'Ширина':185,'Высота':55,'Диаметр':16,'Сезон':'Зима','Производитель':'Yokohama','Модель':'Ice Guard IG55','Типоразмер':'215 / 55  R16','Индекс нагрузки':'102 (850 кг)'})
+              else
+                +card('12 337.12', '', comparing__item, '', false, false, false, false, false, false, false, false, 'card_slide d-flex', 'content/cards/card-1.jpg', false, true, {'Ширина':170,'Высота':45,'Диаметр':17,'Сезон':'Лето','Производитель':'Yokohama','Модель':'Ice Guard IG55','Типоразмер':'215 / 55  R17','Индекс нагрузки':'102 (850 кг)'}, true)
 
     include category/popular.pug
 
