personal orders, pt. 1

--- a/src/pug/personal-orders.pug
+++ b/src/pug/personal-orders.pug
@@ -4,3 +4,104 @@ block meta
   - var title = 'Текущие заказы';
 
 block personal
+  .mb-5
+    .h2.font-weight-bold.text-center.mb-4 #{title}
+    .heading.heading_orders.px-3
+      .heading__col.h6.mb-2 #
+      .heading__col.h6.mb-2 Дата
+      .heading__col.h6.mb-2 Товары
+      .heading__col.h6.mb-2 Сумма
+      .heading__col.h6.mb-2 Отслеживание
+      .heading__col.h6.mb-2 Статус
+    .table-row.box-shadow.border-radius.overflow-hidden.mb-2
+      .table-row__header.py-2.px-3
+        .table-row__col.h5.d-flex.flex-column.justify-content-center 1758767
+        .table-row__col.h5.d-flex.flex-column.justify-content-center 10.08.2021
+        .table-row__col.h5.d-flex.flex-column.justify-content-center.cursor-pointer
+          .text-oneline Летние шины Cordiant Comfort 2 175/70
+          .text-oneline Летние шины Cordiant Comfort 2 175/70
+          .text-oneline Летние шины Cordiant Comfort 2 175/70
+        .table-row__col.h5.d-flex.flex-column.justify-content-center 25 530, 08 ₽
+        .table-row__col.d-flex.flex-column.justify-content-center
+          .social.d-flex.align-items-center
+            a.social__item.h2.color-theme-brand.mr-2(href="#")
+              +icon('wapp')
+            a.social__item.h2.color-theme-brand.mr-2(href="#")
+              +icon('tg')
+        .table-row__col.h5.color-theme-success.d-flex.flex-column.justify-content-center Ожидает отгрузки
+        .table-row__col.d-flex.flex-column.justify-content-center
+          span.d-block.color-theme-brand.cursor-pointer(style="width:20px;height:20px;")
+            +svg('readmore')
+      .table-row__body
+
+    .table-row.box-shadow.border-radius.overflow-hidden.mb-2
+      .table-row__header.py-2.px-3
+        .table-row__col.h5.d-flex.flex-column.justify-content-center 1758767
+        .table-row__col.h5.d-flex.flex-column.justify-content-center 10.08.2021
+        .table-row__col.h5.d-flex.flex-column.justify-content-center.cursor-pointer
+          .text-oneline Летние шины Cordiant Comfort 2 175/70
+          .text-oneline Летние шины Cordiant Comfort 2 175/70
+          .text-oneline Летние шины Cordiant Comfort 2 175/70
+        .table-row__col.h5.d-flex.flex-column.justify-content-center 25 530, 08 ₽
+        .table-row__col.d-flex.flex-column.justify-content-center
+          .social.d-flex.align-items-center
+            a.social__item.h2.color-theme-brand.mr-2(href="#")
+              +icon('tg')
+        .table-row__col.h5.color-theme-brand.d-flex.flex-column.justify-content-center Ожидает обработки
+        .table-row__col.d-flex.flex-column.justify-content-center
+          span.d-block.color-theme-brand.cursor-pointer(style="width:20px;height:20px;")
+            +svg('readmore')
+      .table-row__body
+
+  .mb-5
+    .h2.font-weight-bold.text-center.mb-4 История заказа
+    .table-row.box-shadow.border-radius.overflow-hidden.mb-2
+      .table-row__header.py-2.px-3
+        .table-row__col.h5.d-flex.flex-column.justify-content-center 1758767
+        .table-row__col.h5.d-flex.flex-column.justify-content-center 10.08.2021
+        .table-row__col.h5.d-flex.flex-column.justify-content-center.cursor-pointer
+          .text-oneline Летние шины Cordiant Comfort 2 175/70
+          .text-oneline Летние шины Cordiant Comfort 2 175/70
+          .text-oneline Летние шины Cordiant Comfort 2 175/70
+        .table-row__col.h5.d-flex.flex-column.justify-content-center 25 530, 08 ₽
+        .table-row__col.d-flex.flex-column.justify-content-center
+        .table-row__col.h5.d-flex.flex-column.justify-content-center Готово
+        .table-row__col.d-flex.flex-column.justify-content-center
+          span.d-block.color-theme-brand.cursor-pointer(style="width:20px;height:20px;")
+            +svg('readmore')
+      .table-row__body
+
+    .table-row.box-shadow.border-radius.overflow-hidden.mb-2
+      .table-row__header.py-2.px-3
+        .table-row__col.h5.d-flex.flex-column.justify-content-center 1758767
+        .table-row__col.h5.d-flex.flex-column.justify-content-center 10.08.2021
+        .table-row__col.h5.d-flex.flex-column.justify-content-center.cursor-pointer
+          .text-oneline Летние шины Cordiant Comfort 2 175/70
+          .text-oneline Летние шины Cordiant Comfort 2 175/70
+          .text-oneline Летние шины Cordiant Comfort 2 175/70
+        .table-row__col.h5.d-flex.flex-column.justify-content-center 25 530, 08 ₽
+        .table-row__col.d-flex.flex-column.justify-content-center
+          .social.d-flex.align-items-center
+            a.social__item.h2.color-theme-brand.mr-2(href="#")
+              +icon('wapp')
+        .table-row__col.h5.d-flex.flex-column.justify-content-center Готово
+        .table-row__col.d-flex.flex-column.justify-content-center
+          span.d-block.color-theme-brand.cursor-pointer(style="width:20px;height:20px;")
+            +svg('readmore')
+      .table-row__body
+
+    .table-row.box-shadow.border-radius.overflow-hidden.mb-2
+      .table-row__header.py-2.px-3
+        .table-row__col.h5.d-flex.flex-column.justify-content-center 1758767
+        .table-row__col.h5.d-flex.flex-column.justify-content-center 10.08.2021
+        .table-row__col.h5.d-flex.flex-column.justify-content-center.cursor-pointer
+          .text-oneline Летние шины Cordiant Comfort 2 175/70
+          .text-oneline Летние шины Cordiant Comfort 2 175/70
+          .text-oneline Летние шины Cordiant Comfort 2 175/70
+        .table-row__col.h5.d-flex.flex-column.justify-content-center 25 530, 08 ₽
+        .table-row__col.d-flex.flex-column.justify-content-center e-mail, sms
+        .table-row__col.h5.d-flex.flex-column.justify-content-center Готово
+        .table-row__col.d-flex.flex-column.justify-content-center
+          span.d-block.color-theme-brand.cursor-pointer(style="width:20px;height:20px;")
+            +svg('readmore')
+      .table-row__body
