--- a/src/pug/personal.pug
+++ b/src/pug/personal.pug
@@ -18,7 +18,7 @@ block wrapper
       a.pathway__link(href="#") Главная
       a.pathway__current(href="#") #{title}
     section.content
-      h1 #{title}
+      h1 Личный кабинет
     .row.align-items-start
       .col-xl-3.col-lg-4.mb-lg-4
         .filter.filter_sticky
