--- a/src/scss/base/_mixes.scss
+++ b/src/scss/base/_mixes.scss
@@ -50,6 +50,10 @@
   pointer-events: none !important;
 }
 
+.cursor-pointer {
+  cursor: pointer !important;
+}
+
 .img-cover {
   @include wh(100%);
   object-fit: cover;
