--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -61,6 +61,7 @@ $grid-gutter-width: 8px;
 @import 'tpl/accordion';
 @import 'tpl/pagination';
 @import 'tpl/recalculate';
+@import 'tpl/table-row';
 @import 'tpl/readmore';
 @import 'tpl/toggler';
 @import 'tpl/review';
