--- a/src/scss/tpl/_heading.scss
+++ b/src/scss/tpl/_heading.scss
@@ -1,3 +1,4 @@
+/*
 .heading {
   position: relative;
 }
@@ -10,4 +11,16 @@
   &.heading__col_lg {
     @include fw(100%/10*2);
   }
+}
+*/
+
+.heading {
+  &.heading_orders {
+    display: grid;
+    grid-column-gap: $grid-gutter-width;
+    grid-template-columns: repeat(2,1fr) 3fr repeat(4,1fr);
+  }
+}
+
+.heading__col {
 }
