--- a/src/pug/ui.pug
+++ b/src/pug/ui.pug
@@ -60,6 +60,7 @@ block wrapper
       li.h3.font-weight-bold.color-theme-brand-dark.mb-4 Применён .color-theme-brand-dark;
       li.h3.font-weight-bold.color-theme-success.mb-4 Применён .color-theme-success;
       li.h3.font-weight-bold.color-theme-warning.mb-4 Применён .color-theme-warning;
+      li.h3.font-weight-bold.color-theme-danger.mb-4 Применён .color-theme-danger;
       li.h3.font-weight-bold.color-theme-disabled.mb-4 Применён .color-theme-disabled;
 
   .pt-4.pb-3.px-5.border-bottom
@@ -71,6 +72,7 @@ block wrapper
       li.h4.color-theme-inherit.bg-theme-brand-dark.p-4.mb-3 .bg-theme-brand-dark
       li.h4.color-theme-inherit.bg-theme-success.p-4.mb-3 .bg-theme-success
       li.h4.color-theme-inherit.bg-theme-warning.p-4.mb-3 .bg-theme-warning
+      li.h4.color-theme-inherit.bg-theme-danger.p-4.mb-3 .bg-theme-danger
       li.h4.color-theme-inherit.bg-theme-disabled.p-4.mb-3 .bg-theme-disabled
       li.h4.color-theme-brand-dark.bg-theme-white.border.p-4.mb-3 .bg-theme-white
 
