--- a/src/scss/base/_bg.scss
+++ b/src/scss/base/_bg.scss
@@ -26,6 +26,10 @@
   background: $color__warning !important;
 }
 
+.bg-theme-danger {
+  background: $color__danger !important;
+}
+
 .bg-theme-disabled {
   background: $color__disabled !important;
 }
