--- a/src/pug/personal-vin.pug
+++ b/src/pug/personal-vin.pug
@@ -5,15 +5,94 @@ block meta
 
 block personal
   .h2.font-weight-bold.text-center.mb-4 #{title}
-  .section.pb-0.mb-5
-    .border-bottom.px-lg-5.px-md-4.px-3.pb-md-4.pb-3.mb-3
-      .h3.font-weight-bold.mb-3.color-theme-brand По вашему запросу был осуществен подбор запчастей (WAUBH54B11N111054):
-      a.section__row(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
-      a.section__row(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
-      a.section__row(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
-    .px-lg-5.px-md-4.px-3.pb-3
+  .section.py-0.mb-3
+    .border-bottom.px-md-4.px-3.py-md-4.py-3
+      .h3.font-weight-bold.color-theme-brand По вашему запросу был осуществен подбор запчастей (WAUBH54B11N111054):
+    a.border-bottom.d-block.px-md-4.px-3.py-3(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
+    a.border-bottom.d-block.px-md-4.px-3.py-3(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
+    a.border-bottom.d-block.px-md-4.px-3.py-3(href="#") Передняя ступица для использования с 14"/15" тормозной системой,POC J67/JQ3/JQ4
+    .px-md-4.px-3.py-3
       .row.align-items-center
-        .col-xl-7
+        .col-xl-7.mb-3.mb-xl-0
           .h6.color-theme-disabled После оформления заказа с вами свяжется наш менеджер для уточнения деталей.
         .col-xl-5.d-flex.justify-content-xl-end
           button.btn.text-uppercase(type="button") Оформить заказ
+
+  .section.py-0.mb-5
+    .section__expander.d-flex.align-items-center.justify-content-between.cursor-pointer.px-md-4.px-3.py-2
+      button.btn.btn_nobg.h4.p-0(type="button")
+        span.color-theme-brand.mr-2(style="width:20px;")
+          +svg('select')
+        span.color-theme-brand Подобрать по VIN
+      span.section__readmore.readmore.d-block.color-theme-brand(style="width:20px;height:20px;")
+        +svg('readmore')
+    form.section__body(action="#")
+      .border-bottom.px-md-4.px-3.pt-md-4.pt-3
+        .row
+          .col-md-5.d-flex.flex-column.justify-content-between
+            .form__item.mb-4
+              input.form__field(type="text" value="")
+              .form__label.form__label_title VIN-код *
+            .form__item.mb-4
+              input.form__field(type="text" value="")
+              .form__label.form__label_title Марка авто *
+            .form__item.mb-4
+              input.form__field(type="text" value="")
+              .form__label.form__label_title Год выпуска
+            .form__item.mb-4
+              input.form__field(type="text" value="")
+              .form__label.form__label_title Объём двигателя
+            .form__item.mb-4
+              input.form__field(type="text" value="")
+              .form__label.form__label_title Мощность
+          .col-md-5.offset-md-2.d-flex.flex-column.justify-content-between
+            .form__item.mb-4
+              input.form__field(type="text" value="")
+              .form__label.form__label_title Модель двигателя
+            .form__item.mb-4
+              input.form__field(type="text" value="")
+              .form__label.form__label_title Номер двигателя
+            .form__item.mb-4
+              textarea.form__field.form__field_textarea
+              .form__label.form__label_title Cписок необходимых запчастей *
+      .px-md-4.px-3.py-3
+        .row.align-items-center
+          .col-xl-7.mb-3.mb-xl-0
+            .h6.color-theme-disabled *-поля обязательные для заполнения
+          .col-xl-5.d-flex.justify-content-xl-end
+            button.btn.text-uppercase.px-5(type="submit") Отправить запрос
+
+  .mb-5
+    .h2.font-weight-bold.text-center.mb-4 История подборов по VIN-коду
+    .heading.heading_vin.px-3
+      .heading__col.h6.mb-2 #
+      .heading__col.h6.mb-2 Дата
+      .heading__col.h6.mb-2 Vin-код
+      .heading__col.h6.mb-2 Наименование запчасти
+    .table-row
+      .table-row__header.table-row__header_vin.box-shadow.border-radius.py-2.px-3.mb-md-2.mb-3
+        .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
+          span.table-row__title.text-oneline.text-oneline.d-block.d-md-none Номер:
+          span.text-right.text-md-left 174
+        .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
+          span.table-row__title.d-block.d-md-none Дата:
+          span.text-right.text-md-left 10.08.2021
+        .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
+          span.table-row__title.text-oneline.d-block.d-md-none Vin-код:
+          span.text-right.text-md-left WAUBH54B11N111054
+        .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start
+          span.table-row__title.text-oneline.d-block.d-md-none Наименование запчасти:
+          span.text-right.text-md-left Передняя ступица для использования с 14"/15" тормозной
+      .table-row__header.table-row__header_vin.box-shadow.border-radius.py-2.px-3.mb-md-2.mb-3
+        .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
+          span.table-row__title.text-oneline.text-oneline.d-block.d-md-none Номер:
+          span.text-right.text-md-left 175
+        .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
+          span.table-row__title.d-block.d-md-none Дата:
+          span.text-right.text-md-left 10.08.2021
+        .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
+          span.table-row__title.text-oneline.d-block.d-md-none Vin-код:
+          span.text-right.text-md-left WAUBH54B11N111054
+        .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start
+          span.table-row__title.text-oneline.d-block.d-md-none Наименование запчасти:
+          span.text-right.text-md-left Передняя ступица для использования с 14"/15" тормозной
